# Shuttle_api_template

./: Cargo.toml  README.md
src/: claims.rs  main.rs  schema.sql
src/models/: user.rs
src/routes/: auth.rs
